# shapely

./: .gitignore  .zenodo.json  MANIFEST.in  meson.build  pyproject.toml  setup.cfg  setup.py
shapely/: __init__.py  _version.py  meson.build
shapely/geometry/: meson.build
shapely/tests/: meson.build
shapely/tests/geometry/: meson.build
shapely/tests/legacy/: meson.build
src/: meson.build
